--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -191,7 +191,7 @@ First, the vectors are divided into the two sets, $|T|,|S|$.
 The verifier then retrieves the cross-product commitment update values, $L_{C,j},L_{D,j},R_{C,j},R_{D,j}$.
 These are used for constructing a new commitment according to the fold made at round $i$.
 The corresponding left and right side cross-product are multiplied by a challenge, $\gamma_j,\gamma_j^{-1}$, respectively.
-By this time, the C and D commitments are a commitment to the original commitments along with the folded commitment.
+By this time, the $C$ and $D$ commitments are a commitment to the original commitments along with the folded commitment.
 
 $\mathbf{G,G'}$ are updated as in~\autoref{fig:ipa-prover} before the protocol updates $n$ to be the length of the newly constructed vectors.
 
