--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -200,7 +200,7 @@ As in the prover protocol, this is then repeated for $\log n$ round, after which
 At the end of the protocol, the verifier now does its final check.
 From the prover, it has retreived the folded down $c$ and $d$ vectors.
 It therefore constructs commitments with these elements.
-So, it constructs $c\times G_1+cdH$, which is the structure of the C commitment as well as $d\times G'_1$, which is the structure of the D commitment.
+So, it constructs $c\times G_1+cdH$, which is the structure of the $C$ commitment as well as $d\times G'_1$, which is the structure of the $D$ commitment.
 The verifier now checks if these commitments match the commitments that he constructed in the recursive protocol.
 If so, the verifier accepts the proof.
 
