--- a/report/src/sections/03-background.tex
+++ b/report/src/sections/03-background.tex
@@ -56,7 +56,7 @@ The notation used throughout this paper can be seen in~\autoref{tab:notation}.
 
 \subsection{Security Assumptions}\label{subsec:security-assumptions}
 Since this work is based on the existing Curdleproofs protocol~\cite{Curdleproofs}, it inherits the same security assumptions.
-Our work therefore runs as a public coin protocol in any cryptographic group where~\gls{ddh} holds~\cite{10.1007/BFb0054851}.
+Our work therefore runs as a public coin protocol in any cryptographic group where~\gls{ddh} is hard~\cite{10.1007/BFb0054851}.
 
 \subsection{Zero-knowledge proofs}\label{sec:background-zkps}
 Curdleproofs is a zero-knowledge proof system, which means that it allows a prover to convince a verifier that they know a secret without revealing the secret itself.
