--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -110,3 +110,20 @@ De-Anonymization Attack on Ethereum", Computer Science 9 project},
     note         = {Accessed: 22-10-2024},
     url = {https://ethereum.org/en/roadmap/secret-leader-election/}
 }
+
+@inproceedings{10.1145/3419614.3423258,
+    author = {Boneh, Dan and Eskandarian, Saba and Hanzlik, Lucjan and Greco, Nicola},
+    title = {Single Secret Leader Election},
+    year = {2020},
+    isbn = {9781450381390},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/3419614.3423258},
+    doi = {10.1145/3419614.3423258},
+    booktitle = {Proceedings of the 2nd ACM Conference on Advances in Financial Technologies},
+    pages = {12–24},
+    numpages = {13},
+    keywords = {Secret Leader Election, Proof of Stake, Blockchain},
+    location = {New York, NY, USA},
+    series = {AFT '20}
+}
