Pseudocode about bitstring function

--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -300,7 +300,7 @@ for $1\leq j\leq m$
     $n\gets n+\text{len}(S)$
 
 $\textbf{Step 3:}$
-$\mathbf{\gamma}\gets(\gamma_m,...,\gamma_1)$
+$\mathbf{\gamma}\gets(\gamma_1,...,\gamma_m)$ hmmm
 for $1\leq j\leq n$:
     $\textit{Compute s: see below for difference}$
 AccumulateCheck$(\mathbf{\gamma}\times\mathbf{L}_C+(B_C+\alpha C+(\alpha^2z)H)$
