--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -267,8 +267,6 @@ This allows for checking calculations of the form:
 \end{align}
 As explained by Curdleproofs, the verifier computation can be significantly optimized by checking the multiscalar multiplications as a single check at the end of the protocol instead.
 
-Include AccumulateCheck and AccumulateVerify functions?
-
 CAAUrdleproofs introduced a slight difference on this topic in regard to the~\glspl{ipa}, \texttt{sameperm} and \texttt{same multiscalar}.
 In each recursive round, both the folded vectors and the commitments are being multiplied by verification scalars, $\gamma_j$.
 To keep track of which elements of the vectors are multiplied by each $\gamma_j$, a function called \texttt{get\_verification\_scalars\_bitstring} is used.
@@ -344,6 +342,9 @@ The protocol used in the implementation can be seen in~\autoref{fig:ipa-verifier
 A list, \texttt{ActivePos}, keeps track of the original index placement and its position after each fold.
 Doing this, we can run the recursion and find the correct challenges for each index, while still knowing what the original index was.
 A bit matrix,~$b_{i,j}$, is constructed as in Curdleproofs, such that the vector, $\mathbf{s}$, is made in the same way for both protocols.
+
+The vector, $\mathbf{u}$, is used for optimization in the grand product argument rather than $\mathbf{G'}$, and the \texttt{AccumulateCheck} function is used for the multiscalar multiplication optimization.
+For a thorough explanation of these, we refer to Curdleproofs~\cite{Curdleproofs}.
 
 In Curdleproofs, both the \texttt{SamePerm} and \texttt{SameMultiscalar} proof are recursive~\glspl{ipa}.
 So, the modifications and optimization used on the \texttt{SamePerm} argument are also used on the \texttt{SameMultiscalar} argument.
