--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -140,3 +140,14 @@ De-Anonymization Attack on Ethereum", Computer Science 9 project},
     location = {New York, NY, USA},
     series = {AFT '20}
 }
+
+@article{haastad2006square,
+    title={The square lattice shuffle},
+    author={H{\aa}stad, Johan},
+    journal={Random Structures and Algorithms},
+    volume={29},
+    number={4},
+    pages={466--474},
+    year={2006},
+    publisher={New York: J. Wiley, c1990-}
+}
