Began on experiment

--- a/report/src/sections/05-experimental-protocol.tex
+++ b/report/src/sections/05-experimental-protocol.tex
@@ -1,10 +1,11 @@
 
 \section{Experimental Protocol}\label{sec:experimental-protocol}
-
+In this section, we will describe how our experiments are run, and what we want to measure.
+We also discuss which parameters we can tweak in the different experiments that we have.
 
 
 \subsection{Size of curdleproofs}\label{sec:experimental-protocol-size}
-In this experiment we measured the time to run both the original curdleproofs and our version with the addition of springproofs.
+In this experiment we measure the time to run both the original Curdleproofs protocol and our protocol, CAAUrdleproofs.
 Curdleproofs was run with the shuffle sizes of 64 and 128 as it has to run with a power of 2.
 
 Since our version has the addition of springproofs, we were able to run it without having to consider the shuffle size being a power of 2.
