--- a/report/src/sections/02-related-work.tex
+++ b/report/src/sections/02-related-work.tex
@@ -11,6 +11,7 @@
 \subsection{Shuffling algorithm}\label{sec:related-work-Shuffling-algorithm}
 
 The Håstad square shuffle~\cite{haastad2006square} is one of the proposed ways of integrating an~\gls{ssle}.
+The Håstad square shuffle is a shuffling algorithm that shuffles a $n$ long vector with a shuffle size of $\sqrt {n}$ giving it its name.
 is a more rigid version of the shuffling algorithm used in curdleproofs~\cite{cryptoeprint:2022/560}.
 
 
