--- a/report/src/sections/02-related-work.tex
+++ b/report/src/sections/02-related-work.tex
@@ -12,7 +12,8 @@
 
 The Håstad square shuffle~\cite{haastad2006square} is one of the proposed ways of integrating an~\gls{ssle}.
 The Håstad square shuffle is a shuffling algorithm that shuffles a $n$ long vector with a shuffle size of $\sqrt {n}$ giving it its name.
-is a more rigid version of the shuffling algorithm used in curdleproofs~\cite{cryptoeprint:2022/560}.
+This is because the algorithm works by splitting the vector into $\sqrt {n}$ times $\sqrt {n}$ square matrix and for each step in the algorithm it switches between shuffling a row and a column.
+The Håstad shuffle is a more rigid than the shuffling algorithm used in curdleproofs~\cite{cryptoeprint:2022/560} because of the fixed size of the shuffle being $\sqrt {n}$.
 
 
 
