--- a/report/src/sections/03-background.tex
+++ b/report/src/sections/03-background.tex
@@ -99,4 +99,11 @@ The third proof is a samescalar argument which proves that, given a public input
 Curdleproofs is a zero-knowledge proof system, which means that it allows a prover to convince a verifier that they know a secret without revealing the secret itself.
 within the context of Ethereum it could be the ability to convince someone that a transaction is valid without revealing information about the transaction such as the value of it.
 
-
+\definition{\textbf{Zero-knowledge}}
+This is a paragraph explaining what zero-knowledge is.
+\definition{\textbf{Soundness}}
+This is a paragraph explaining what soundness is.
+\definition{\textbf{Completeness}}
+This is a paragraph explaining what completeness is.
+\definition{\textbf{Zero-Knowledge Argument of Knowledge}}
+An argument is a \textit{}
