--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -151,3 +151,11 @@ De-Anonymization Attack on Ethereum", Computer Science 9 project},
     year={2006},
     publisher={New York: J. Wiley, c1990-}
 }
+
+@article{Feistle,
+    title        = {Privacy Analysis of Whisk},
+    author       = {The Ethereum Foundation Cryptography Research Team},
+    note         = {Accessed: 15-05-2025},
+    url = {https://github.com/khovratovich/whisk-analysis/blob/ba6a4b1374efe56ebbde692c7fc3b549d1eb0133/WhiskAnalysis.pdf}
+}
+
