--- a/report/src/sections/02-related-work.tex
+++ b/report/src/sections/02-related-work.tex
@@ -4,7 +4,12 @@
 
 
 \subsection{Single Secret Leader Election}\label{sec:related-work-SSLE}
+A~\gls{ssle} is a protocol where a group of participants randomly elects only one leader from a group.
+The identity of the leader is kept secret from all other participants so only the leader themselves know that they have been chosen.
+The elected leader can then later publicly prove that they have been elected~\cite{10.1145/3419614.3423258}.
+One of the use cases of~\gls{ssle} is to make~\gls{pos} more efficient.
 
+One~\gls{pos} cryptocurrency that uses~\gls{ssle} is Polkadot which uses Safrole as thei~\gls{ssle} protocol~\cite{polkadot}.
 
 
 
