ssle and shuffling

--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -159,3 +159,9 @@ De-Anonymization Attack on Ethereum", Computer Science 9 project},
     url = {https://github.com/khovratovich/whisk-analysis/blob/ba6a4b1374efe56ebbde692c7fc3b549d1eb0133/WhiskAnalysis.pdf}
 }
 
+@article{safrole,
+    title        = {-safrole},
+    author       = {Polkadot Web3 Foundation},
+    note         = {Accessed: 16-05-2025},
+    url = {https://wiki.polkadot.network/learn/learn-safrole/}
+}
