--- a/report/src/sections/02-related-work.tex
+++ b/report/src/sections/02-related-work.tex
@@ -7,9 +7,9 @@
 A~\gls{ssle} is a protocol where a group of participants randomly elects only one leader from a group.
 The identity of the leader is kept secret from all other participants so only the leader themselves know that they have been chosen.
 The elected leader can then later publicly prove that they have been elected~\cite{10.1145/3419614.3423258}.
-One of the use cases of~\gls{ssle} is to make~\gls{pos} more efficient.
+One of the use cases of~\gls{ssle} is to make~\gls{pos} cryptocurrencies more secure due to the added privacy that the proposer has.
 
-One~\gls{pos} cryptocurrency that uses~\gls{ssle} is Polkadot which uses Safrole as thei~\gls{ssle} protocol~\cite{polkadot}.
+One~\gls{pos} cryptocurrency that uses a~\gls{ssle} is Polkadot which uses Safrole as their~\gls{ssle} protocol~\cite{safrole}.
 
 
 
