--- a/report/src/sections/02-related-work.tex
+++ b/report/src/sections/02-related-work.tex
@@ -4,26 +4,26 @@
 
 
 \subsection{Single Secret Leader Election}\label{sec:related-work-SSLE}
-A~\gls{ssle} is a protocol where a group of participants randomly elects only one leader from a group.
+A~\gls{ssle} is a protocol where a group of participants randomly elects only one leader from the group.
 The identity of the leader is kept secret from all other participants so only the leader themselves know that they have been chosen.
 The elected leader can then later publicly prove that they have been elected~\cite{10.1145/3419614.3423258}.
 One of the use cases of~\gls{ssle} is to make~\gls{pos} cryptocurrencies more secure due to the added privacy that the proposer has.
 
-One~\gls{pos} cryptocurrency that uses a~\gls{ssle} is Polkadot which uses Safrole as their~\gls{ssle} protocol~\cite{safrole}.
+One~\gls{pos} cryptocurrency that uses an~\gls{ssle} is Polkadot which uses Safrole as their~\gls{ssle} protocol~\cite{safrole}.
 
 
 
 \subsection{Shuffling algorithm}\label{sec:related-work-Shuffling-algorithm}
 
 The Håstad square shuffle~\cite{haastad2006square} is one of the proposed ways of integrating an~\gls{ssle}.
-The Håstad square shuffle is a shuffling algorithm that shuffles a $n$ long vector with a shuffle size of $\sqrt {n}$ giving it its name.
-This is because the algorithm works by splitting the vector into $\sqrt {n}$ times $\sqrt {n}$ square matrix and for each step in the algorithm it switches between shuffling a row and a column.
-The Håstad shuffle is a more rigid than the shuffling algorithm used in curdleproofs~\cite{cryptoeprint:2022/560} because of the fixed size of the shuffle being $\sqrt {n}$.
+The Håstad square shuffle is a shuffling algorithm that shuffles a $n$ long vector with a shuffle size of $\sqrt {n}$.
+The algorithm works by splitting the vector into $\sqrt {n}$ times $\sqrt {n}$ square matrix and for each step in the algorithm it switches between shuffling a row and a column.
+The Håstad shuffle is more rigid than the shuffling algorithm used in curdleproofs~\cite{cryptoeprint:2022/560} because of the fixed size of the shuffle being $\sqrt {n}$.
 
 The Feistel shuffle~\cite{Feistle} is the previous shuffle method used in the Whisk protocol~\cite{Whisk2024}.
 The Feistel shuffle is a shuffling algorithm that works by taking $n$ number of trackers and arranging them in a $k$ times $k$ matrix.
 Each round the $i$-th proposer selects the $i$-th row of the created matrix and shuffles it in the form $F(x,y)=(y,x+y^3 mod k)$.
-The Feistel shuffle was then later replaced by the shuffle proposed be Larson et al.~\cite{cryptoeprint:2022/560} because of the Feistel shuffle being too slow to shuffle the list of proposers.
+The Feistel shuffle was then later replaced by the shuffle proposed be Larsen et al.~\cite{cryptoeprint:2022/560} because of the Feistel shuffle being too slow to shuffle the list of proposers.
 
 
 \subsection{Bulletproofs}\label{sec:related-work-bulletproofs}
