--- a/report/src/sections/03-background.tex
+++ b/report/src/sections/03-background.tex
@@ -1,8 +1,7 @@
 
 \section{Background}\label{sec:background}
+In this section, we provide the necessary background information on the Curdleproofs protocol~\cite{Curdleproofs}, the Whisk protocol~\cite{Whisk2024} and an overview of the notation used in the paper.
 
-
-\subsection{Notation}\label{sec:background-notation}
 The notation used throughout this paper can be seen in~\autoref{tab:notation}.
 \begin{table*}[ht]
     \centering
@@ -54,27 +53,32 @@ The notation used throughout this paper can be seen in~\autoref{tab:notation}.
     \label{tab:notation}
 \end{table*}
 
-\subsection{Security Assumptions}\label{subsec:security-assumptions}
+
 Since this work is based on the existing Curdleproofs protocol~\cite{Curdleproofs}, it inherits the same security assumptions.
 Our work therefore runs as a public coin protocol in any cryptographic group where~\gls{ddh} is hard~\cite{10.1007/BFb0054851}.
 
+\begin{definition}[DDH]
+ Given a finite, multiplicative cyclic group $\mathbb{G}$ of prime order $p$, the decisional Diffie-Hellman problem is defined as follows: Given $(g^a,g^b,g^c)\in\mathbb{G}$, where $g$ is a generator of $\mathbb{G}$ and $a,b,c\in\mathbb{Z}_p$, decide whether $c=ab$ or not.}
+\end{definition}
+
 \subsection{Whisk}\label{sec:related-work-whisk}
 
-\subsubsection{Ethereum}\label{sec:background-ethereum}
+\paragraph*{\textbf{Ethereum}}\label{sec:background-ethereum}
 Ethereum is a decentralized blockchain platform that enables developers to build and deploy smart contracts and decentralized applications.
 It is the second-largest blockchain platform by market capitalization and has a large and active developer community.
 Ethereum uses a proof-of-stake consensus mechanism, which allows users to validate transactions and create new blocks by staking their Ether (ETH) tokens.
 The Proof-of stake protocol works in epochs of 32 slots, where each slot is 12 seconds long.
 In each slot a proposer is chosen to propose a block thereby allowing the network to reach consensus on the state of the blockchain.
 
-\subsubsection{Proposer DoS attack}\label{sec:background-proposer-DoS-attacks}
-An attack on the Ethereum network that was discovered by Heimbach et al.~\cite{heimbach2024deanonymizingethereumvalidatorsp2p} is the deanonymization attack on validators.
-In our preliminary work~\cite{ouroldpaper}, we have shown that the attack still possible to perform on the Ethereum network, and using the attack, a proposer DoS can be preformed.
+\paragraph*{\textbf{Proposer DoS attack}}\label{sec:background-proposer-DoS-attacks}
 The proposer DoS attack is a type of attack that targets the block proposers making them unable to propose blocks.
 An adversary can use the proposer DoS attack to prevent a proposer from receiving rewards, gotten from proposing a block, and increase their oen rewards~\cite{EthereumSSLE2024}.
 As a response to the proposer DoS attack, Ethereum has proposed a new protocol called Whisk~\cite{Whisk2024} as an attempt to mitigate the attack.
+An attack on the Ethereum network that was discovered by Heimbach et al.~\cite{heimbach2024deanonymizingethereumvalidatorsp2p} is the deanonymization attack on validators.
+In our preliminary work~\cite{ouroldpaper}, we have shown that the attack still possible to perform on the Ethereum network, and using the attack, a proposer DoS can be preformed.
 
-\subsubsection{The Whisk protocol}\label{sec:background-mitigation}
+
+\paragraph*{\textbf{The Whisk protocol}}\label{sec:background-mitigation}
 Whisk is a zero-knowledge Single Secret Leader Election (SSLE) system that uses a zero-knowledge argument called curdleproofs~\cite{Curdleproofs} to verify the correctness of a shuffle without revealing the input or output~\cite{10.1145/3419614.3423258}
 Whisk works by selecting a list of proposers 16384 and shuffling them over 8192 slots (1 day).
 Then 8192 proposers are selected from the shuffled list to propose blocks for the next 8192 slots while a new list is being shuffled.
@@ -82,7 +86,7 @@ This way a new list of proposers is created every day.
 After each shuffle Whisk uses a zero-knowledge proof to prove that the shuffle is correct.
 This is so that the proposer can prove that they are the correct proposer for the slot without revealing their identity, thereby mitigating the proposer DoS attack because of the identity of the upcoming proposers being hidden now.
 
-\subsubsection{Curdleproofs}\label{sec:background-curdleproofs}
+\paragraph*{\textbf{Curdleproofs}}\label{sec:background-curdleproofs}
 Curdleproofs is a zero-knowledge proof system that allows a prover to prove the authenticity of a shuffle without revealing how it was shuffled.
 It does this by using 3 different zero-knowledge proofs with one of them relying on two more zero-knowledge proofs.
 the first proof is a sameperm proof.
