--- a/report/src/setup/acronyms.tex
+++ b/report/src/setup/acronyms.tex
@@ -22,3 +22,4 @@
 \newacronym{mev}{MEV}{Maximal Extractable Value}
 \newacronym{ddh}{DDH}{Decisional Diffie-Hellman}
 \newacronym{ipa}{IPA}{Inner Product Argument}
+\newacronym{hvzk}{HVZK}{Honest-Verifier Zero-Knowledge}
