Added proof to appendix

--- a/report/src/sections/aa-appendix.tex
+++ b/report/src/sections/aa-appendix.tex
@@ -4,3 +4,4 @@
 % Main appendix file
 % Insert appendix sections below
 \input{sections/appendix/01-appendix}
+\input{sections/appendix/02-thm1proof}
