--- a/report/src/sections/appendix/02-thm1proof.tex
+++ b/report/src/sections/appendix/02-thm1proof.tex
@@ -21,9 +21,69 @@
     Specifically, the pre-compression is shown to run in $\lceil \log n\rceil$ folding rounds, satisfying the existence of the polynomial mentioned in Theorem 5.
 
     Curdleproofs show their argument to be zero-knowledge in the random oracle model provided $|\mathbf{G}|\geq8$~\cite{Curdleproofs}.
-    Therefore, following Theorem 1, CAAUrdleproofs must be~\gls{hvzk} when $n\geq2$
+    Therefore, following Theorem 1, CAAUrdleproofs must be~\gls{hvzk} when $n\geq8$
 
-    FOR SOUNDNESS AND COMPLETENESS, LOOK AT THEOREM 3 IN SPRINGPROOFS AND THE DISCORD TEXT
+    For soundness and completeness, we refer to Theorem 3 of Springproofs~\cite{zhang2024springproofs}.
+    \begin{theorem}[Springproofs Theorem 3]
+        Given a terminative SIPA$(f)$, if the number of compression steps in SIPA$(f)$ os $O(\log n)$, then SIPA$(f)$ is a complete and computational knowledge sound argument of relation (1).
+        Moreover, the Fiat-Shamir transformation of SIPA$(f)$ is a non-interactive random oracle argument having completeness and computational knowledge soundness as well.
+    \end{theorem}
+    Here, relation (1) is
+    \begin{align}
+        \{(\mathbf{g},\mathbf{h}\in\mathbb{G}^n,u,P\in\mathbb{G};\mathbf{a},\mathbf{b}\in\mathbb{F}_p^n):P=\mathbf{g}^\mathbf{a}\mathbf{h}^\mathbf{b}u^{\langle \mathbf{a},\mathbf{b}\rangle}\}
+    \end{align}
+    or analogously for an additive cryptographic group:
+    \begin{align}
+        \{(&\mathbf{g},\mathbf{h}\in\mathbb{G}^n,u,P\in\mathbb{G};\mathbf{a},\mathbf{b}\in\mathbb{F}_p^n):\\
+        &P=\mathbf{a}\times\mathbf{g}+\mathbf{b}\times\mathbf{h}+\langle \mathbf{a},\mathbf{b}\rangle u\}\label{al:P}
+    \end{align}
+    Relating that to Curdleproofs, they mention that they discuss the~\gls{ipa} for the relation
+    \begin{align}
+        \left\{
+        \,(C,D,z;\,\mathbf{c},\mathbf{d})\;\middle|\;
+        \begin{aligned}
+            C &= \mathbf{c} \times \mathbf{G},\\
+            D &= \mathbf{d} \times \mathbf{G'},\\
+            z &= \mathbf{c} \times \mathbf{d}
+        \end{aligned}
+        \right\}
+    \end{align}
+    Though, taking inspiration from Bulletproofs, which also happens to be the~\gls{ipa} used in Springproofs, they include a commitment to the inner product, $z$, in commitment $C$~\cite{bunz2018bulletproofs}.
+    So, before the addition of blinding values and challenges, the relation they want to prove is:
+    \begin{align}
+        \left\{
+        \, \left(
+        \begin{aligned}
+            \mathbf{G},\mathbf{G'}\in\mathbb{G}^n,\\
+            C,D\in\mathbb{G},\\
+            z\in\mathbb{F}_p
+        \end{aligned}
+        \;\middle|\;
+        \begin{aligned}
+            \mathbf{c},\mathbf{d}\in\mathbb{F}^n_p
+        \end{aligned}
+        \right)\;\middle|\;
+        \begin{aligned}
+            C &= \mathbf{c} \times \mathbf{G}+zH,\\
+            D &= \mathbf{d} \times \mathbf{G'},\\
+            z &= \mathbf{c} \times \mathbf{d}
+        \end{aligned}
+        \right\}
+    \end{align}
+    We can now take a look at Springproofs' $P$ commitment in relation to Curdleproofs' $C$ and $D$ commitments.
+    If we add together Curdleproofs' two commitment, we get:
+    \begin{align}
+        C+D=\mathbf{c} \times \mathbf{G}+\mathbf{d} \times \mathbf{G'}+zH
+    \end{align}
+    This exactly the same commitment as in~\autoref{al:P}.
+
+    Therefore, using Curdleproofs' DL~\gls{ipa} and the pre-compression scheme function, we can instantiate SIPA$(f)$, equivalent to CAAUrdleproofs, as a terminative SIPA$(f)$, with $O(\log n)$ compression steps.
+    Hence, SIPA$(f)$ is a complete and computational knowledge sound argument of relation (1).
+    We have just shown that Curdleproofs'~\gls{ipa} proves the same relation, so the properties hold for our SIPA$(f)$ as well.
+    Furthermore, Curdleproofs uses the Fiat-Shamir transformation for its verifier challenges.
+    So, the SIPA$(f)$, analogously CAAUrdleproofs, is a non-interactive random oracle argument having completeness and computational knowledge soundness as well.
+
+    From this, we can conclude that CAAUrdleproofs is a zero-knowledge argument of knowledge when shuffle size $|k|\geq8$.
 \end{proof}
 
 
