--- a/report/src/sections/appendix/01-appendix.tex
+++ b/report/src/sections/appendix/01-appendix.tex
@@ -1,7 +1,7 @@
 
 \section{Definitions of Zero-Knowledge Argument of Knowledge}\label{sec:appendix}
 \begin{definition}[Honest-Verifier Zero-Knowledge]
-    An interactive!!! argument $(Setup, P, V)$ for a relation $R$ is honest-verifier zero-knowledge, if there exists a
+    An interactive argument $(Setup, P, V)$ for a relation $R$ is honest-verifier zero-knowledge, if there exists a
     probabilistic polynomial time simulator, such that there exists a negigible function $\epsilon(\lambda)$, for all adversaries $A_1$ and $A_2$
 
     \begin{align*}
