sameperm and samemsm

--- a/report/src/setup/acronyms.tex
+++ b/report/src/setup/acronyms.tex
@@ -23,3 +23,6 @@
 \newacronym{ddh}{DDH}{Decisional Diffie-Hellman}
 \newacronym{ipa}{IPA}{Inner Product Argument}
 \newacronym{hvzk}{HVZK}{Honest-Verifier Zero-Knowledge}
+\newacronym{sameperm}{SamePerm}{Same Permutation}
+\newacronym{samemsm}{SameMSM}{Same Multiscalar}
+
